# Sand

./: CMakeLists.txt  README.md  TODO.md  compile_commands.json
res/: main.glsl
src/: Renderer.cpp  Renderer.h  Sand.cpp  Shader.cpp  Shader.h  defines.h
src/Buffers/: IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
